added autoindex in filetransfers

--- a/templates/html/dashboard.html
+++ b/templates/html/dashboard.html
@@ -102,7 +102,7 @@
 <!-- Footer --> 
 <div id="footer">
   {% block footer %}
-  &copy; 2017 Adam Mischke
+  <i> Adam Mischke's browser @ </i>
   {% endblock %}
 </div>
 </body>
