--- a/templates/html/filemanager.html
+++ b/templates/html/filemanager.html
@@ -77,6 +77,7 @@ input[type="submit"] {
       <p><input type=file name=upload>
          <input type=submit value="&#xf093;">
     </form>
+    <font color=ref>{{ uploaded }}</font>
     <h3>Download File</h3>
   
     <a href="{{ url_for('static',filename='') }}"> download here</a>
