--- a/templates/html/scratchpad.html
+++ b/templates/html/scratchpad.html
@@ -482,7 +482,7 @@ input[type="submit"] {
              <input type="submit" value= "" id="{{ color }}button" onclick=changeColor("{{ color }}");>
              {% endfor %}
             
-            <font color=ref>{{ uploaded }}</font>
+            <font color=red>{{ uploaded }}</font>
             
         </div>
 
