--- a/templates/html/filemanager.html
+++ b/templates/html/filemanager.html
@@ -77,10 +77,14 @@ input[type="submit"] {
       <p><input type=file name=upload>
          <input type=submit value="&#xf093;">
     </form>
-    <font color=ref>{{ uploaded }}</font>
+    <font color=red>{{ uploaded }}</font>
+    <form method=post action="{{ url_for('remove_file') }}" enctype=multipart/form-data>
+      <p><input type=text name=remove>
+         <input type=submit value="remove file">
+    </form>
     <h3>Download File</h3>
+  <iframe src="{{ url_for('static',filename='') }}" scrolling='no' frameborder='0' width='100%' height='600px'></iframe>
   
-    <a href="{{ url_for('static',filename='') }}"> download here</a>
     
     
 {% endblock %}
