--- a/templates/html/pictures.html
+++ b/templates/html/pictures.html
@@ -1,22 +1,71 @@
 {% extends "html/dashboard.html" %}
+<html>
+<head>
+{% block head %}
+
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- favicon  <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon2.ico') }}" type="image/x-icon">-->
+ 
+  <!-- jQuery first, then Popper, then Bootstrap JS. -->  
+  <!-- FULL jquery for $.post() -->
+  <script src="{{ url_for('static', filename='js/jquery-3.2.1.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+
+  <!-- bootstrap v.4b css -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">
+
+{% block javascript %}
+
+<script type="text/javascript">
+  
+  function ran_int (min, max) {
+    return Math.floor(Math.random() * (max - min + 1)) + min;
+  }
+  
+</script>
+{% endblock %}
+
+{% block style %}
+<style>
+
+  
+
+
+.image img {
+    margin: 1px;
+    -webkit-transition: all 1s ease; /* Safari and Chrome */
+    -moz-transition: all 1s ease; /* Firefox */
+    -ms-transition: all 1s ease; /* IE 9 */
+    -o-transition: all 1s ease; /* Opera */
+    transition: all 1s ease;
+}
+
+.image:hover img {
+    -webkit-transform:scale(1.25); /* Safari and Chrome */
+    -moz-transform:scale(1.25); /* Firefox */
+    -ms-transform:scale(1.25); /* IE 9 */
+    -o-transform:scale(1.25); /* Opera */
+     transform:scale(1.25);
+}
+</style>
+{% endblock %}
+{% endblock %}
+
+</head>
 
 {% block content %}
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner" role="listbox">
+  <br>
     {% for pic in pictures %}
-      <div class="carousel-item active">
-      <img class="d-block img-fluid" src="{{ pic }}" alt="">
-    </div>
+
+      <span class="image">
+        <a href="{{ url_for('static',filename='') }}{{ pic }}"><img src="{{ url_for('static',filename='') }}{{ pic }}" width='48%' height='300px'/></a>
+      </span>
     {% endfor %}
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
 {% endblock %}
